[workspace]
resolver = "2"
members = ["typst-wasm-macros", "typst-wasm-protocol"]
default-members = ["typst-wasm-protocol"]

[workspace.package]
version = "0.0.2"
publish = true
repository = "https://github.com/sjfhsjfh/typst-wasm"
license = "MIT"
description = "Typst WASM tools"

[workspace.dependencies]
typst-wasm-macros = { path = "./typst-wasm-macros", version = "0.0.2" }
typst-wasm-protocol = { path = "./typst-wasm-protocol", version = "0.0.2" }

proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "2.0.99"
venial = "0.6.1"
